--- a/SeatingHelper/MainWindow.xaml
+++ b/SeatingHelper/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Label Content="# of players: " HorizontalAlignment="Left" Margin="182,42,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Margin="259,46,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Name="numPlayers"/>
         <Label Content="# of rows: " HorizontalAlignment="Left" Margin="37,89,0,0" VerticalAlignment="Top"/>
-        <xctk:IntegerUpDown Value="4" HorizontalAlignment="Left" Margin="115,92,0,0" VerticalAlignment="Top" Name="numRows" Minimum="1" Maximum="8" Increment="1" Width="40" Height="20" />
+        <xctk:IntegerUpDown Value="4" HorizontalAlignment="Left" Margin="115,92,0,0" VerticalAlignment="Top" Name="numRows" Minimum="1" Maximum="8" Increment="1" Width="40" Height="20" ValueChanged="numRows_ValueChanged" />
         <Label Content="Max row width: " HorizontalAlignment="Left" Margin="37,142,0,0" VerticalAlignment="Top" />
         <xctk:IntegerUpDown Value="12" HorizontalAlignment="Left" Margin="136,146,0,0" VerticalAlignment="Top" x:Name="maxRowWidth" Minimum="4" Maximum="15" Increment="1" Width="40" Height="20" />
         <RadioButton Content="Parts must share row" HorizontalAlignment="Left" Margin="46,202,0,0" VerticalAlignment="Top"/>
