--- a/SeatingHelper/MainWindow.xaml
+++ b/SeatingHelper/MainWindow.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <TextBox HorizontalAlignment="Left" Margin="37,22,0,0" TextWrapping="NoWrap" Text="Filename" VerticalAlignment="Top" Width="300" Name="filenameDisplay"/>
         <Button Content="Choose File (.xls, .xlsx)" HorizontalAlignment="Left" Margin="37,45,0,0" VerticalAlignment="Top" Click="Button_Choose_File_Click"/>
-        <Label Content="max # of players: " HorizontalAlignment="Left" Margin="163,42,0,0" VerticalAlignment="Top"/>
+        <Label Content="total # of players: " HorizontalAlignment="Left" Margin="163,42,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Margin="271,46,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Name="numPlayers"/>
         <Label Content="# of rows: " HorizontalAlignment="Left" Margin="37,89,0,0" VerticalAlignment="Top"/>
         <xctk:IntegerUpDown Value="4" HorizontalAlignment="Left" Margin="115,92,0,0" VerticalAlignment="Top" Name="numRows" Minimum="1" Maximum="8" Increment="1" Width="40" Height="20" ValueChanged="numRows_ValueChanged" />
