--- a/SeatingHelper/MainWindow.xaml
+++ b/SeatingHelper/MainWindow.xaml
@@ -23,7 +23,12 @@
         <xctk:IntegerUpDown Value="12" HorizontalAlignment="Left" Margin="133,240,0,0" VerticalAlignment="Top" x:Name="numStraightRows" Minimum="0" Maximum="8" Increment="1" Width="40" Height="20" IsEnabled="False" />
         <Label Content="rows straight" HorizontalAlignment="Left" Margin="183,236,0,0" VerticalAlignment="Top" IsEnabled="False"/>
         <Button Content="Generate charts!" HorizontalAlignment="Left" Margin="46,294,0,0" VerticalAlignment="Top"/>
-        <ListView x:Name="chartsList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="383,0,0,0" SelectionChanged="ListView_SelectionChanged">
+        <ListView x:Name="chartsList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="383,0,0,0">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_DoubleClick"/>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="60" Header="Rows" DisplayMemberBinding="{Binding Rows}"/>
