--- a/SeatingHelper/MainWindow.xaml
+++ b/SeatingHelper/MainWindow.xaml
@@ -1,4 +1,6 @@
-﻿<Window x:Class="SeatingHelper.MainWindow"
+﻿<Window 
+        Style="{StaticResource MaterialDesignWindow}"
+        x:Class="SeatingHelper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,33 +10,27 @@
         mc:Ignorable="d"
         Title="Seating Helper" Height="450" Width="800">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Margin="37,22,0,0" TextWrapping="NoWrap" Text="Filename" VerticalAlignment="Top" Width="300" Name="filenameDisplay"/>
-        <Button Content="Choose File (.xls, .xlsx)" HorizontalAlignment="Left" Margin="37,45,0,0" VerticalAlignment="Top" Click="Button_Choose_File_Click"/>
-        <Label Content="total # of players: " HorizontalAlignment="Left" Margin="163,42,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="271,46,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="66" Name="numPlayers"/>
-        <Label Content="# of rows: " HorizontalAlignment="Left" Margin="37,89,0,0" VerticalAlignment="Top"/>
-        <xctk:IntegerUpDown Value="4" HorizontalAlignment="Left" Margin="115,92,0,0" VerticalAlignment="Top" Name="numRows" Minimum="1" Maximum="8" Increment="1" Width="40" Height="20" ValueChanged="numRows_ValueChanged" />
-        <Label Content="Max row width: " HorizontalAlignment="Left" Margin="37,142,0,0" VerticalAlignment="Top" />
-        <xctk:IntegerUpDown Value="12" HorizontalAlignment="Left" Margin="136,146,0,0" VerticalAlignment="Top" x:Name="maxRowWidth" Minimum="4" Maximum="15" Increment="1" Width="40" Height="20" />
-        <CheckBox x:Name="tryBlockFirst" Content="Try block seating first" HorizontalAlignment="Left" Margin="48,202,0,0" VerticalAlignment="Top" />
-        <CheckBox Content="" HorizontalAlignment="Left" Margin="46,241,0,0" VerticalAlignment="Top" IsEnabled="False"/>
-        <Label Content="Make back " HorizontalAlignment="Left" Margin="62,236,0,0" VerticalAlignment="Top" IsEnabled="False"/>
-        <xctk:IntegerUpDown Value="12" HorizontalAlignment="Left" Margin="133,240,0,0" VerticalAlignment="Top" x:Name="numStraightRows" Minimum="0" Maximum="8" Increment="1" Width="40" Height="20" IsEnabled="False" />
-        <Label Content="rows straight" HorizontalAlignment="Left" Margin="183,236,0,0" VerticalAlignment="Top" IsEnabled="False"/>
-        <Button Content="Generate charts!" HorizontalAlignment="Left" Margin="46,294,0,0" VerticalAlignment="Top" Click="GenerateButton_Click"/>
-        <Button x:Name="exportButton" Content="Export charts" HorizontalAlignment="Left" Margin="46,326,0,0" VerticalAlignment="Top" IsEnabled="False" Click="ExportButton_Click"/>
-        <ListView x:Name="chartsList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="383,0,0,0">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="{x:Type ListViewItem}">
-                    <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_DoubleClick"/>
+        <TextBox HorizontalAlignment="Left" Margin="37,16,0,0" TextWrapping="NoWrap" Text="Filename" VerticalAlignment="Top" Width="332" Name="filenameDisplay"/>
+        <Button Content="Choose File (.xls, .xlsx)" HorizontalAlignment="Left" Margin="37,51,0,0" VerticalAlignment="Top" Click="Button_Choose_File_Click"/>
+        <Label Content="Total # of players: " HorizontalAlignment="Left" Margin="211,54,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="330,54,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="39" Name="numPlayers"/>
+        <Label Content="# of rows: " HorizontalAlignment="Left" Margin="37,95,0,0" VerticalAlignment="Top"/>
+        <xctk:IntegerUpDown Value="4" HorizontalAlignment="Left" Margin="136,98,0,0" VerticalAlignment="Top" Name="numRows" Minimum="1" Maximum="8" Increment="1" Width="40" Height="20" ValueChanged="numRows_ValueChanged" />
+        <Label Content="Max row width: " HorizontalAlignment="Left" Margin="37,135,0,0" VerticalAlignment="Top" />
+        <xctk:IntegerUpDown Value="12" HorizontalAlignment="Left" Margin="136,139,0,0" VerticalAlignment="Top" x:Name="maxRowWidth" Minimum="4" Maximum="15" Increment="1" Width="40" Height="20" />
+        <CheckBox x:Name="tryBlockFirst" Content="Try block seating first" HorizontalAlignment="Left" Margin="33,175,0,0" VerticalAlignment="Top" />
+        <Button Content="Generate charts!" HorizontalAlignment="Left" Margin="37,337,0,0" VerticalAlignment="Top" Click="GenerateButton_Click"/>
+        <Button x:Name="exportButton" Content="Export charts" HorizontalAlignment="Left" Margin="253,337,0,0" VerticalAlignment="Top" IsEnabled="False" Click="ExportButton_Click"/>
+        <DataGrid x:Name="chartsList" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="465,0,0,0" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" >
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridRow}">
+                    <EventSetter Event="MouseDoubleClick" Handler="DataGridItem_DoubleClick"/>
                 </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Width="60" Header="Rows" DisplayMemberBinding="{Binding Rows}"/>
-                    <GridViewColumn Width="60" Header="Players" DisplayMemberBinding="{Binding Players}"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+            </DataGrid.Resources>
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="100" Header="Rows" Binding="{Binding Rows}"/>
+                <DataGridTextColumn Width="100" Header="Players" Binding="{Binding Players}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
